manifest/health-record-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-record-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: health-record-api
  template:
    metadata:
      labels:
        app: health-record-api
    spec:
      containers:
        - name: health-record-api
          image: manoj1128/patienthistoryapi:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
