manifest/health-record-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: health-record-api
spec:
  type: ClusterIP
  selector:
    app: health-record-api
  ports:
  - port: 80
